# patcher

./: config.json  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  App.vue  main.ts  main.tsx  router.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/commands/: configs.rs  projects.rs
src-tauri/src/configs/: global.rs
src-tauri/src/core/: menu.rs  mod.rs
src-tauri/src/core/configs/: controller.rs  global_config.rs  mod.rs
src-tauri/src/core/projects/: mod.rs  oas3_impl.rs  oas3_implementations.rs  project.rs  project_data.rs  project_info.rs
src/assets/css/: colors.scss  fonts.scss  global.scss
src/components/: BaseModal.vue  ContextMenu.vue  CustomScrollbar.vue  DragHeader.vue  LineSeparator.vue  Notifications.vue  NotificationsCenter.vue
src/components/button/: Button.scss  Button.tsx  SmallButton.scss  SmallButton.tsx
src/components/buttons/: BaseButton.vue  SmallButton.vue
src/components/context-menu/: ContextMenu.scss  ContextMenu.tsx
src/components/drag-header/: DragHeader.scss  DragHeader.tsx
src/components/inputs/: PathSelectInput.vue  SingleLineInput.vue  SwitchInput.vue
src/components/lists/: RecentProjectListItem.vue
src/components/modals/: BaseModal.vue  NewProjectModal.vue  (+1 more)
src/interfaces/: configs.ts  context-menu.ts  notifications.ts  oas3-common.ts  oas3-ext.ts  oas3-server.ts  oas3.ts  projects.ts
src/pages/: RecentProjectsPage.vue
src/utils/: dates.ts  events-names.ts
(+8 files in other folders)
